# music_move

./: .cache  .coverage  .gitignore  .spotify_cache  LICENSE  README.md  add_method.py  analysis.md  batch_test.txt  batch_test_report.txt  clean_test.py  compare_results.py  config.example.json  debug_imports.py  debug_indentation.py  debug_matcher.py  direct_test.py  enhanced_matcher_complete.py  enhanced_matcher_fixed.py  enhanced_matcher_implementation.py  enhanced_matcher_update.py  final_integration_test.py  final_test.py  fix_indentation.py  fix_routes.py  fixed_text_normalizer.py  install_patch.py  matching_report.txt  matching_report_final_fix.txt  matching_report_new.txt  matching_report_updated.txt  monkey_patch_enhanced_matcher.py  optimization_summary.md  optimized_string_matcher.py  package-lock.json  performance_analysis.py  performance_optimization.py  performance_optimization_report.md  performance_optimization_summary.md  performance_report.json  (+41 more)
spotify_playlist_importer/: .gitignore  .spotify_project_cache  CONTRIBUTING.md  QUICK_START.md  README.md  generate_env.py  pyproject.toml  requirements.txt  run_fixed_api.py  setup.py
spotify_playlist_importer/api/: __init__.py  api_server_fixed.py  routes_fixed.py
spotify_playlist_importer/spotify/: client_manager.py
spotify_playlist_importer/spotify_playlist_importer/core/: async_config.py  batch_processor.py  config.py  input_parser.py  models.py  optimized_batch_processor.py  unified_config.py
spotify_playlist_importer/spotify_playlist_importer/spotify/: auth.py  matcher.py  singleton_client.py  (+1 more)
(+133 files in other folders)
